fb registration bug fixed, social networks attached in admin/performer/view image upload through zend form removed

--- a/application/modules/admin/views/scripts/layout.phtml
+++ b/application/modules/admin/views/scripts/layout.phtml
@@ -77,6 +77,7 @@
                    <li><a tabindex="-1" href="<?= $this->url(array('controller' => 'settings', 'action' => 'edit-about'))?>">О проекте</a></li>
                    <li><a tabindex="-1" href="<?= $this->url(array('controller' => 'settings', 'action' => 'edit-contacts'))?>">Контакты</a></li>
                    <li><a tabindex="-1" href="<?= $this->url(array('controller' => 'settings', 'action' => 'edit-terms'))?>">Правила использования</a></li>
+                   <li><a tabindex="-1" href="<?= $this->url(array('controller' => 'settings', 'action' => 'edit-safety'))?>">Надежность и безопасность</a></li>
                    <li><a tabindex="-1" href="<?= $this->url(array('controller' => 'settings', 'action' => 'edit-become-performer'))?>">Как стать исполнителем</a></li>
                    <li><a tabindex="-1" href="<?= $this->url(array('controller' => 'main-banner', 'action' => 'slider-list'))?>">Баннер главной страницы</a></li>
                  </ul>
