--- a/application/modules/customer/views/scripts/performers/index.phtml
+++ b/application/modules/customer/views/scripts/performers/index.phtml
@@ -37,7 +37,7 @@
             <div class="col-sm-2">
               
                <a href="<?= $this->baseUrl().'/customer/performers/performer-view/id/'.$performer['u_id']  ?>">
-                   <div style="background: center no-repeat url(<?= $this->baseUrl().'/images/users_images/'.$performer['u_image'] ?>); height:122px; width: 160px; background-size: contain; margin-top: 10px" src="" alt="img" class="img-thumbnail img-responsive"></div>          
+                   <div style="background: center no-repeat url('<?= $this->baseUrl().'/images/users_images/'.$performer['u_image'] ?>'); height:122px; width: 160px; background-size: contain; margin-top: 10px" src="" alt="img" class="img-thumbnail img-responsive"></div>          
                    
                 </a>  
               
