--- a/application/modules/default/views/scripts/layout.phtml
+++ b/application/modules/default/views/scripts/layout.phtml
@@ -476,10 +476,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
             <a  href="<?= $this->baseUrl().'/about/' ?>"> Как это работает</a>
 
         </li>
-        <li >
-            <a  href="<?= $this->baseUrl().'/contacts/' ?>"> Контакты</a>
-
-        </li>
+        
       </ul>
       
 
@@ -525,6 +522,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
           <h3> Меню </h3>
           <ul>
             
+            <li> <a href="<?= $this->baseUrl().'/safety/' ?>">Надежность и безопасность сервиса</a> </li>
             <li> <a href="<?= $this->baseUrl().'/become-performer/' ?>">Как стать исполнителем</a> </li>
             <li> <a href="<?= $this->baseUrl().'/terms/' ?>">Правила сервиса</a> </li>
             <li> <a href="<?= $this->baseUrl().'/about/' ?>"> Как это работает</a> </li>
