--- a/application/modules/performer/views/scripts/task/view.phtml
+++ b/application/modules/performer/views/scripts/task/view.phtml
@@ -142,7 +142,7 @@ if (hs.addSlideshow) hs.addSlideshow({
 
         <div class="col-lg-12">
            <label>Дата исполнения : </label>
-           <?= date(" h:00 d.m.Y",$this->task['final_date']) ?>
+           <?= date(" H:00 d.m.Y",$this->task['final_date']) ?>
         </div>
         <div class="col-lg-12">
             <label>Описание : </label>
