--- a/application/modules/admin/views/scripts/customers/view.phtml
+++ b/application/modules/admin/views/scripts/customers/view.phtml
@@ -47,7 +47,7 @@
             <?php } ?>
             <?php if($this->user['fb']){?>
             <div class="col-lg-12">
-                <a href="https://www.facebook.com/<?= $this->user['fb'] ?>">ok.ru</a>
+                <a href="https://www.facebook.com/<?= $this->user['fb'] ?>">facebook.com</a>
             </div>
             <?php } ?>
         </div>
