--- a/application/modules/admin/views/scripts/settings/edit-safety.phtml
+++ b/application/modules/admin/views/scripts/settings/edit-safety.phtml
@@ -2,19 +2,19 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-                <h3>Условия использования</h3>
+                <h3>Безопасность и надежность</h3>
             </div>
         <?php if($this->successMes){?>
             <div class="col-sm-12">
                 <p class="text-success"><?= $this->successMes ?></p>
             </div>
         <?php }?>
-        <form action="<?= $this->baseUrl().'/admin/settings/edit-terms/' ?>" method="post">
+        <form action="<?= $this->baseUrl().'/admin/settings/edit-safety/' ?>" method="post">
             <div class="col-sm-12" style="padding-bottom: 10px">
                 <label>Текст</label>
-                <textarea name="content" id="content" ><?php if($this->terms['content']):?><?= $this->terms['content'] ?><?php endif;?></textarea>
+                <textarea name="content" id="content" ><?php if($this->safety['text']):?><?= $this->safety['text'] ?><?php endif;?></textarea>
             </div>
-           
+            
             <div class="col-sm-12" >
                 <input type="submit" class="btn btn-primary" value="Изменить">
             </div>
