--- a/application/modules/customer/views/scripts/layout.phtml
+++ b/application/modules/customer/views/scripts/layout.phtml
@@ -502,11 +502,9 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
            <?php if(Zend_Auth::getInstance()->hasIdentity()){?>       
                 <li> <a href="<?= $this->baseUrl().'/customer/performers/'?>">Исполнители</a> </li>
                 <li> <a href="<?= $this->baseUrl().'/customer/about/'?>">Как это работает</a> </li>
-                <li> <a href="<?= $this->baseUrl().'/customer/contacts/'?>">Контакты</a> </li>
            <?php }else{?>
                 <li> <a href="<?= $this->baseUrl().'/performers/'?>">Исполнители</a> </li>
-                <li> <a href="<?= $this->baseUrl().'/about/'?>">О проекте</a> </li>
-                <li> <a href="<?= $this->baseUrl().'/contacts/'?>">Контакты</a> </li>
+                <li> <a href="<?= $this->baseUrl().'/about/'?>">Как это работает</a> </li>
            <?php }?>
                 <?php $user = Zend_Auth::getInstance()->getIdentity();  ?>
           <?php if(Zend_Auth::getInstance()->hasIdentity()){?>
@@ -560,6 +558,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
         <div class="col-lg-4  col-md-12 col-sm-12 col-xs-12">
           <h3> Меню </h3>
           <ul>
+            <li> <a href="<?= $this->baseUrl().'/customer/safety/' ?>">Надежность и безопасность сервиса</a> </li>
             <li> <a href="<?= $this->baseUrl().'/customer/become-performer/' ?>">Как стать исполнителем</a> </li>
             <li> <a href="<?= $this->baseUrl().'/customer/about/' ?>">Как это работает</a> </li>
             <li> <a href="<?= $this->baseUrl().'/customer/terms/' ?>">Правила сервиса</a> </li>
