--- a/application/modules/performer/views/scripts/index/tasks.phtml
+++ b/application/modules/performer/views/scripts/index/tasks.phtml
@@ -56,19 +56,19 @@
             <div class="col-sm-2">
                <a href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>" >
                <?php if($task['task_image']){?>   
-                   <div style="background: center no-repeat url(<?= $this->baseUrl().'/images/task_images/'.$task['task_image'] ?>); height:122px; width: 160px; background-size: contain; margin-top: 21px" src="" alt="img" class="img-thumbnail img-responsive"></div>
+                   <div style="background: center no-repeat url('<?= $this->baseUrl().'/images/task_images/'.$task['task_image'] ?>'); height:122px; width: 160px; background-size: contain; margin-top: 21px" src="" alt="img" class="img-thumbnail img-responsive"></div>
                   
                <?php }else{ ?>
-                  <div style="background: center no-repeat url(<?= $this->baseUrl().'/images/task_images/'.$task['task_image'] ?>); height:122px; width: 160px; background-size: contain; margin-top: 21px" src="" alt="img" class="img-thumbnail img-responsive"></div>
+                  <div style="background: center no-repeat url('<?= $this->baseUrl().'/images/task_images/'.$task['task_image'] ?>'); height:122px; width: 160px; background-size: contain; margin-top: 21px" src="" alt="img" class="img-thumbnail img-responsive"></div>
 
                <?php } ?>   
               </a>
             </div>
             <div class="col-sm-10">
-                <div class="col-sm-9">                
+                <div class="col-sm-8">                
                     <h4 style="margin-top: 15px !important"><a href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>" ><?= $task['title'] ?></a></h4>
                 </div>
-                <div class="col-sm-3">                
+                <div class="col-sm-4">                
                     <h4 style="margin-top: 15px !important"> <span><?= $task['price'] ?> бел. рублей</h4>
                 </div>
                 <div class="col-sm-12"> 
