--- a/application/modules/performer/views/scripts/layout.phtml
+++ b/application/modules/performer/views/scripts/layout.phtml
@@ -480,7 +480,6 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
             <li> <a href="#"  data-toggle="modal" data-target="#ModalLogin">Заказать услугу</a> </li>
             <li> <a href="<?= $this->baseUrl()?>/performers/">Исполнители </a> </li>
             <li> <a href="<?= $this->baseUrl()?>/about/">Как это работает</a> </li>
-            <li> <a href="<?= $this->baseUrl()?>/contacts">Контакты</a> </li>
           <?php } ?>
       </ul>
       <!--/.navbar-nav hidden-xs--> 
@@ -525,6 +524,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
           <h3> Меню </h3>
           <ul>
               
+            <li> <a href="<?= $this->baseUrl().'/performer/safety/'?>" >Надежность и безопасность сервиса</a> </li>
             <li> <a href="<?= $this->baseUrl().'/performer/become-performer/'?>" >Как стать исполнителем</a> </li>
             <li> <a href="<?= $this->baseUrl().'/performer/terms/'?>" > Правила сервиса</a> </li>
             <li> <a href="<?= $this->baseUrl().'/performer/about/' ?>"> Как это работает</a> </li>
