--- a/application/modules/performer/views/scripts/performers/performer-view.phtml
+++ b/application/modules/performer/views/scripts/performers/performer-view.phtml
@@ -12,13 +12,9 @@
     
     <!-- left column -->
     <div class="col-lg-4 col-md-4 col-sm-4"> 
-      <!-- product Image and Zoom -->
-      
       <div class="main-image sp-wrap col-lg-12 no-padding style3" style="display: inline-block;">
           <div class="sp-large">
-              
                   <img src="<?= $this->baseUrl().'/images/users_images/'.$this->performer['image'] ?>" class="img-responsive" alt="img">
-              
           </div>
       </div>
     </div>
@@ -26,7 +22,7 @@
     
     <!-- right column -->
     <div class="col-lg-8 col-md-8 col-sm-8">
-        <div class="col-sm-4">
+        <div class="col-sm-8">
             <h1 class="product-title"><?= $this->performer['username'].' '.mb_substr($this->performer['surname'], 0, 1,'utf-8').'.' ?></h1>
         </div>
               <?php $sec = time()-$this->performer['birth_date'];
@@ -87,7 +83,7 @@
       <?php } ?>
         </div>
         <div class="col-sm-12">
-            <h3 class="product-code">Возраст : <?= $age; ?> лет</h3>
+            <h3 class="product-code">Возраст: <?= $age; ?> лет</h3>
          </div>
          <div class="col-sm-12">
       <?php
@@ -106,7 +102,7 @@
       ?>
         </div>
       <div class="details-description col-sm-12">
-          <h3 class="product-code">Сферы деятельности :</h3>
+          <h3 class="product-code">Сферы деятельности:</h3>
           
               <?php foreach($this->usersCategories as $cat){?>
                 <small><?= $cat['mc_title'].'. '; ?></small>
@@ -143,7 +139,7 @@
     <?php if($this->performer['about']){?>
     <div class="col-lg-12" style="padding-bottom: 10px">
         <h3 class="block-title-3">
-                Дополнительная информация  
+                Личная информация  
         </h3>
         <p><?= $this->performer['about'] ?></p>
     </div>
